Fix slider padding and whitespace issue on Safari (#1669)

--- a/assets/base.css
+++ b/assets/base.css
@@ -1166,8 +1166,9 @@ summary::-webkit-details-marker {
     margin-left: 1.5rem;
   }
 
-  .grid--peek.slider .grid__item:last-of-type {
-    margin-right: 1.5rem;
+  /* Fix to show some space at the end of our sliders in all browsers */
+  .grid--peek.slider:after {
+    margin-left: calc(-1 * var(--grid-mobile-horizontal-spacing));
   }
 
   .grid--2-col-tablet-down .grid__item {
@@ -1201,10 +1202,6 @@ summary::-webkit-details-marker {
 
   .slider--tablet.grid--peek .grid__item:first-of-type {
     margin-left: 1.5rem;
-  }
-
-  .slider--tablet.grid--peek .grid__item:last-of-type {
-    margin-right: 1.5rem;
   }
 
   .grid--2-col-tablet-down .grid__item {
