--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -535,12 +535,6 @@ a.product__text {
   display: block;
 }
 
-@media screen and (max-width: 749px) {
-  .product__media-item--variant:first-child {
-    padding-right: 1.5rem;
-  }
-}
-
 @media screen and (min-width: 750px) and (max-width: 989px) {
   .product__media-list .product__media-item:first-child {
     padding-left: 0;
@@ -981,6 +975,11 @@ a.product__text {
 .thumbnail-list {
   flex-wrap: wrap;
   grid-gap: 1rem;
+}
+
+/* Fix to show some space at the end of our sliders in all browsers to be applied on thumbnails */
+.slider--mobile.thumbnail-list:after {
+  content: none;
 }
 
 @media screen and (min-width: 750px) {
